# distily

./: pyproject.toml  readme.md  todo.md
distily/: __init__.py  args.py  benchmark.py  bitnet_utils.py  cli.py  data.py  distill_loss.py  distillation_strategy.py  distillation_trainer.py  metrics.py  modelcard.py  models.py  objectives.py  run.py  tinyllama_bitnet_utils.py
distily/objectives/: __init__.py  layer_mappers.py  loss.py  norm.py  objectives.py  projectors.py  whiten.py
distily/tools/: __init__.py  create_dataset.py  create_filtered_redpajama_dataset.py
examples/: phi-3-to-gpt2.py
scripts/: profile_train.py
tests/: test_norm.py
