[tool.poetry]
name = "distily"
version = "0.2.0"
description = "Distily: Language Model Distillation Toolkit and Library"
authors = ["Andrew Lapp <andrew@github.rew.la>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.09"
transformers = ">=4.43"
datasets = ">=2.0"
tqdm = ">=4.0"
torch = ">=2.0"
accelerate = ">=0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
distily = "distily.cli:run"
