[tool.poetry]
name = "distily"
version = "0.2.0"
description = "Distily: Language Model Distillation Toolkit and Library"
authors = ["Andrew Lapp <andrew@github.rew.la>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.09"
transformers = ">=4.43"
datasets = ">=2.0"
tqdm = ">=4.0"
torch = ">=2.0"
accelerate = ">=0.21.0"

# TODO: these should be optional deps in distily[extras]
bitsandbytes = ">=0.43.3 "
flash-attn = ">=2.6.3"
tensorboardX = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
distily = "distily.run:train_entry"
