[tool.poetry]
name = "distily"
version = "0.5.0"
description = "Distily: Language Model Distillation Toolkit and Library"
authors = ["Andrew Lapp <andrew@github.rew.la>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.09"
transformers = ">=4.43"
datasets = ">=2.0"
tqdm = ">=4.0"
torch = ">=2.4.0"
accelerate = ">=0.21.0"

# optional
bitsandbytes = { version = ">=0.43.3", optional = true }
flash-attn = { version = ">=2.6.3", optional = true}
tensorboardX = { version = "*", optional = true }
lm_eval = { version = "*", optional = true }

[tool.poetry.extras]
full = ["bitsandbytes", "flash-attn", "tensorboardX", "lm_eval"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
distily = "distily.run:train_entry"
